Actulizado la memoria

--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -241,3 +241,69 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	year = {2019},
 	note = {original-date: 2017-03-23T06:43:40Z}
 }
+
+@misc{noauthor_moodle_nodate-2,
+	title = {Moodle plugins directory: {Heatmap}},
+	url = {https://moodle.org/plugins/block_heatmap},
+	urldate = {2019-06-18},
+	file = {Moodle plugins directory\: Heatmap:C\:\\Users\\PC\\Zotero\\storage\\BTPAJB2S\\block_heatmap.html:text/html}
+}
+
+@misc{noauthor_moodle_nodate-3,
+	title = {Moodle plugins directory: {SmartKlass}™ {Learning} {Analytics} {Moodle}},
+	url = {https://moodle.org/plugins/local_smart_klass},
+	urldate = {2019-06-18},
+	file = {Moodle plugins directory\: SmartKlass™ Learning Analytics Moodle:C\:\\Users\\PC\\Zotero\\storage\\RK7VUMC3\\local_smart_klass.html:text/html}
+}
+
+@misc{noauthor_klassdata/moodle-local_smart_klass:_nodate,
+	title = {klassdata/moodle-local\_smart\_klass: {Moodle} {Plugin} for {SmartKlass} {Learning} {Analytics} {Tool}},
+	url = {https://github.com/klassdata/moodle-local_smart_klass},
+	urldate = {2019-06-18},
+	file = {klassdata/moodle-local_smart_klass\: Moodle Plugin for SmartKlass Learning Analytics Tool:C\:\\Users\\PC\\Zotero\\storage\\WJFTZKZL\\moodle-local_smart_klass.html:text/html}
+}
+
+@misc{noauthor_moodle_nodate-4,
+	title = {Moodle plugins directory: {Engagement} analytics},
+	url = {https://moodle.org/plugins/report_engagement},
+	urldate = {2019-06-18},
+	file = {Moodle plugins directory\: Engagement analytics:C\:\\Users\\PC\\Zotero\\storage\\25C5SRPQ\\report_engagement.html:text/html}
+}
+
+@misc{noauthor_moodle_nodate-5,
+	title = {Moodle plugins directory: {Course} dedication: {Stats}},
+	url = {https://moodle.org/plugins/stats.php?plugin=block_dedication},
+	urldate = {2019-06-18},
+	file = {Moodle plugins directory\: Course dedication\: Stats:C\:\\Users\\PC\\Zotero\\storage\\9SMETNB5\\stats.html:text/html}
+}
+
+@misc{noauthor_oracle_nodate-1,
+	title = {Oracle {Java} {SE} {Support} {Roadmap}},
+	url = {https://www.oracle.com/technetwork/java/java-se-support-roadmap.html},
+	urldate = {2019-06-18},
+	file = {Oracle Java SE Support Roadmap:C\:\\Users\\PC\\Zotero\\storage\\IV86YFMP\\java-se-support-roadmap.html:text/html}
+}
+
+@misc{noauthor_charts_nodate,
+	title = {Charts},
+	url = {https://developers.google.com/chart/},
+	abstract = {Interactive charts for browsers and mobile devices.},
+	language = {en},
+	urldate = {2019-06-18},
+	journal = {Google Developers},
+	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\U7MRFVPI\\chart.html:text/html}
+}
+
+@misc{noauthor_schneier_nodate,
+	title = {Schneier on {Security}: {The} {Blowfish} {Encryption} {Algorithm}},
+	url = {https://www.schneier.com/academic/blowfish/},
+	urldate = {2019-06-18},
+	file = {Schneier on Security\: The Blowfish Encryption Algorithm:C\:\\Users\\PC\\Zotero\\storage\\D5FNELQL\\blowfish.html:text/html}
+}
+
+@misc{noauthor_tkinter_nodate,
+	title = {{TkInter} - {Python} {Wiki}},
+	url = {https://wiki.python.org/moin/TkInter},
+	urldate = {2019-06-19},
+	file = {TkInter - Python Wiki:C\:\\Users\\PC\\Zotero\\storage\\2BH79E3X\\TkInter.html:text/html}
+}
