--- a/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -19,8 +19,7 @@ En Moodle la funcionalidad de REST API se conoce como \textit{Web Services} que 
 \section{Java}
 Java es un lenguaje de programación orientado a objetos, diseñado para escribir el código una vez y ejecutar en cualquier otro dispositivo sin tener que recompilar siempre y cuando se tenga instalado\textit{Java Runtime Enviroment (JRE)}. Actualmente es uno de los lenguajes programación con mayor popularidad de uso, tanto en el ámbito de desarrollo como en el de usuarios.
 
-El desarrollo, al igual que el anterior proyecto UBUGrades y UBULogs, se ha seguido con Java 8 al ser una edición con \href{https://www.oracle.com/technetwork/java/java-se-support-roadmap.html
-}{soporte extendido}.
+El desarrollo, al igual que el anterior proyecto UBUGrades y UBULogs, se ha seguido con Java 8 al ser una edición con soporte extendido\cite{noauthor_oracle_nodate}.
 
 \section{JavaFX}
 Es un paquete gráfico que permite crear aplicación interactivas. Viene incluido en Java 8 dentro de la \textit{Java Development Kit (JDK)} y en \textit{Java Runtime Enviroment (JRE)} por lo que se puede ejecutar en otro dispositivo sin tener que instalar librerías adicionales.
@@ -41,7 +40,6 @@ En el proyecto se sigue usando Charts.js para la visualización las nuevas gráf
 \href{https://codepen.io}{CodePen} es una herramienta web que permite crear prototipos de páginas HTML, CSS y JavaScript y ver los resultados en tiempo real.
 
 Usado para probar prototipos de gráficas con los registros del curso.
-
 
 \section{JSON}
 
@@ -76,6 +74,9 @@ El presente proyecto está realizado en \LaTeX usando las versiones portables de
 \subsection{TeXstudio}
 
 \href{https://www.texstudio.org/}{TeXstudio} es un entorno de desarrollo integrado (IDE) de edición de texto, código abierto con resaltado de sintaxis orientado a la creación de documentos \LaTeX.
+
+\subsection{Zotero}
+\href{https://www.zotero.org/}{Zotero} es un gestor de referencias bibliográficas de código libre creado por el Center for History and New Media de la Universidad George Mason.
 
 \section{Python}
 \href{https://www.python.org/}{Python} es un lenguaje de programación interpretado, orientado a objetos, dinámicamente tipado y de alto nivel. Este lenguaje es muy atractivo para crear prototipos de forma sencilla y rápida. 
@@ -125,7 +126,9 @@ Al manejar una ventana de navegador web para mostrar las gráficas, se han apoya
 
 Se ha mantenido está librería por su facilidad de crear las gráficas y sus múltiples opciones. Sin embargo por un error de la librería en el anterior proyecto, se ha actualizado Chart.js a la última versión disponible \href{https://www.chartjs.org/dist/2.8.0/Chart.min.js}{v2.8.0}
 
+\subsection{Google Charts}
 
+\href{https://developers.google.com/chart/}{Google Charts} es una librería \textit{open source} de gráficas, dispone de múltiples tipos de gráficas interactivas. Se usa para mostrar la tabla de calificaciones.
 
 
 
