--- a/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -1,4 +1,13 @@
 \capitulo{7}{Conclusiones y Líneas de trabajo futuras}
 
-Todo proyecto debe incluir las conclusiones que se derivan de su desarrollo. Éstas pueden ser de diferente índole, dependiendo de la tipología del proyecto, pero normalmente van a estar presentes un conjunto de conclusiones relacionadas con los resultados del proyecto y un conjunto de conclusiones técnicas. 
-Además, resulta muy útil realizar un informe crítico indicando cómo se puede mejorar el proyecto, o cómo se puede continuar trabajando en la línea del proyecto realizado. 
+\section{Conclusiones}
+
+Después de finalizar el proyecto, una de las conclusiones que podemos sacar es que se ha cumplido bastante bien los objetivos planeados. Uno de los cambios más importantes fue empezar y modificar prácticamente todo el proyecto excepto la interfaz gráfica, ha salido mucho mejor de lo esperado.  
+
+Se han implementado multitud de nuevas funcionalidades, algunas de ellas por iniciativa propia, como guardar en un fichero de configuración los nombres de usuario y el \textit{host}, imágenes de los participantes del curso facilitando la identificación y también mostrar la última vez que se accedió al servidor de Moodle.
+
+He aplicado lo aprendido de muchas de las asignaturas de la carrera, procesadores de lenguaje en las expresiones regulares, patrones de diseño y Java. De esto último he aplicado prácticamente todas sus características tales como herencia, genericidad, programación funcional o Java Stream.
+
+El aprendizaje de uso con JavaFx no fue muy complicado ya que había tenido experiencias previas con varios trabajos de la universidad con Tkinter\cite{noauthor_tkinter_nodate}, una librería de creación de interfaces gráficas pero en Python.
+
+\section{Líneas de trabajo futuras}
