Actualizado la memoria.

--- a/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -58,7 +58,7 @@ Al igual que el anterior proyecto de UBUGrades, se volvió a implementar funció
 
 Después de implementar esta funcionalidad, cuando lo probó uno de tutores daba error en la respuesta del servicio web. Finalmente se descubrió que era un error de Moodle cuando se oculta la columna de \textbf{Retroalimentación o Feedback} del calificador\cite{zadok_[mdl-64298]_nodate}. Este error aun no se ha solucionado en la versión 3.7 de Moodle.
 
-\imagen{excepctiongradeitems}{Mensaje de error cuando la retroalimentación del calificador está oculto}
+\imagenflotante{excepctiongradeitems}{Mensaje de error cuando la retroalimentación del calificador está oculto}
 
 Debido a este inconveniente, se decidió trabajar con otra función del servicio web, \textbf{\textit{gradereport\_user\_get\_grades\_table}}, mucho más incómoda para extraer datos debido a que las respuestas contienen HTML. 
 
