Actualizado la memoria cambiando las imágenes a flotantes. Cambiado el plainnat por biblatex

--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -7,8 +7,7 @@
 	urldate = {2019-05-20},
 	author = {Fernández Armengol, Oscar Fernández},
 	month = dec,
-	year = {2017},
-	note = {original-date: 2017-10-09T13:32:44Z}
+	year = {2017}
 }
 
 @misc{nogal_santamaria_continuacion_2017,
@@ -18,8 +17,7 @@
 	urldate = {2019-05-20},
 	author = {Nogal Santamaría, Felix},
 	month = oct,
-	year = {2017},
-	note = {original-date: 2017-10-10T23:30:55Z}
+	year = {2017}
 }
 
 @misc{noauthor_stack_nodate,
@@ -141,7 +139,7 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	file = {Token para ingreso - MoodleDocs:C\:\\Users\\PC\\Zotero\\storage\\QDKA9BFB\\Token_para_ingreso.html:text/html}
 }
 
-@misc{noauthor_<input_nodate,
+@misc{noauthor_input_nodate,
 	title = {{\textless}input type="hidden"{\textgreater}},
 	url = {https://developer.mozilla.org/es/docs/Web/HTML/Elemento/input/hidden},
 	abstract = {input elements of type "hidden" let web developers include data that cannot be seen or modified by users when a form is submitted. For example, the ID of the content that is currently being ordered or edited, or a unique security token. Hidden inputs are completely invisible in the rendered page, and there is no way to make it visible in the page's content.},
@@ -226,20 +224,17 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	urldate = {2019-06-17},
 	publisher = {Chart.js},
 	month = jun,
-	year = {2019},
-	note = {original-date: 2016-05-20T02:45:18Z}
+	year = {2019}
 }
 
-@misc{y-takey_this_2019,
+@misc{noauthor_this_2019,
 	title = {This plugin for {Chart}.js that makes your bar chart to 100\% stacked bar chart.: y-takey/chartjs-plugin-stacked100},
 	copyright = {MIT},
 	shorttitle = {This plugin for {Chart}.js that makes your bar chart to 100\% stacked bar chart.},
 	url = {https://github.com/y-takey/chartjs-plugin-stacked100},
 	urldate = {2019-06-17},
-	author = {y-takey},
 	month = jun,
-	year = {2019},
-	note = {original-date: 2017-03-23T06:43:40Z}
+	year = {2019}
 }
 
 @misc{noauthor_moodle_nodate-2,
@@ -256,7 +251,7 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	file = {Moodle plugins directory\: SmartKlass™ Learning Analytics Moodle:C\:\\Users\\PC\\Zotero\\storage\\RK7VUMC3\\local_smart_klass.html:text/html}
 }
 
-@misc{noauthor_klassdata/moodle-local_smart_klass:_nodate,
+@misc{noauthor_klassdata/moodle-local_smart_klass_nodate,
 	title = {klassdata/moodle-local\_smart\_klass: {Moodle} {Plugin} for {SmartKlass} {Learning} {Analytics} {Tool}},
 	url = {https://github.com/klassdata/moodle-local_smart_klass},
 	urldate = {2019-06-18},
@@ -306,4 +301,11 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	url = {https://wiki.python.org/moin/TkInter},
 	urldate = {2019-06-19},
 	file = {TkInter - Python Wiki:C\:\\Users\\PC\\Zotero\\storage\\2BH79E3X\\TkInter.html:text/html}
+}
+
+@misc{noauthor_better_nodate,
+	title = {Better {BibTeX} for {Zotero}},
+	url = {https://retorque.re/zotero-better-bibtex/installation/},
+	urldate = {2019-06-19},
+	file = {Better BibTeX for Zotero:C\:\\Users\\PC\\Zotero\\storage\\VZQWJ9S6\\installation.html:text/html}
 }
