--- a/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -7,19 +7,19 @@ En este apartado se explicará las técnicas y herramientas usadas para el desar
 Se ha seguido una de las metodologías ágiles conocido como SCRUM adaptado a para una sola persona con reuniones semanales en vez diarias. Con una estrategia iterativa (incremental) con entregas parciales en los \textit{sprints}.
 
 \section{Moodle}
-Moodle es una herramienta de gestión del aprendizaje, distribución libre y escrita en PHP. Ayuda a los docentes en la educación a distancia y en la gestión de los diferentes modos de calificación.
+\href{https://moodle.org}{Moodle} es una herramienta de gestión del aprendizaje, distribución libre y escrita en PHP. Ayuda a los docentes en la educación a distancia y en la gestión de los diferentes modos de calificación.
 
 En la página oficial de Moodle ofrece varias versiones de prueba que cualquiera puede acceder con unos usuarios y contraseña predefinidos.
 
 \section{REST API}
-REST\cite{noauthor_api_nodate} son todas las interfaces entre sistemas que usa HTTP para conseguir datos o realizar operaciones sobre esos datos en todos los formatos posibles, como puede ser XML y JSON.
+REST \cite{noauthor_api_nodate} son todas las interfaces entre sistemas que usa HTTP para conseguir datos o realizar operaciones sobre esos datos en todos los formatos posibles, como puede ser XML y JSON.
 
 En Moodle la funcionalidad de REST API se conoce como \textit{Web Services} que a partir de un \textit{token} generado previamente por la función \textbf{\textit{moodle\_mobile\_app}} se puede acceder a otras funciones del servicio. Puede ser desde ver las calificaciones de alumnos hasta crear actividades o tareas.
 
 \section{Java}
 Java es un lenguaje de programación orientado a objetos, diseñado para escribir el código una vez y ejecutar en cualquier otro dispositivo sin tener que recompilar siempre y cuando se tenga instalado\textit{Java Runtime Enviroment (JRE)}. Actualmente es uno de los lenguajes programación con mayor popularidad de uso, tanto en el ámbito de desarrollo como en el de usuarios.
 
-El desarrollo, al igual que el anterior proyecto UBUGrades y UBULogs, se ha seguido con Java 8 al ser una edición con soporte extendido\cite{noauthor_oracle_nodate}.
+El desarrollo, al igual que el anterior proyecto UBUGrades y UBULogs, se ha seguido con Java 8 al ser una edición con soporte extendido \cite{noauthor_oracle_nodate}.
 
 \section{JavaFX}
 Es un paquete gráfico que permite crear aplicación interactivas. Viene incluido en Java 8 dentro de la \textit{Java Development Kit (JDK)} y en \textit{Java Runtime Enviroment (JRE)} por lo que se puede ejecutar en otro dispositivo sin tener que instalar librerías adicionales.
