--- a/latex/tex/6_Trabajos_relacionados.tex
+++ b/latex/tex/6_Trabajos_relacionados.tex
@@ -6,26 +6,26 @@ Existe varios plugins de Moodle que realizan trabajos parecidos al proyecto.
 
 \section{Heatmap}
 
-Heatmap\cite{noauthor_moodle_nodate-2} superpone un mapa de calor (gradiente de color) en un curso para resaltar los módulos dependiendo del nivel de actividad y así ayudar a los docentes a mejorar sus cursos.
+Heatmap\cite{noauthor_moodle_nodate-2} superpone un mapa de calor (gradiente de color) en un curso para resaltar los módulos dependiendo del nivel de actividad y así ayudar a los docentes a mejorar sus cursos. Ejemplo en la figura \ref{fig:heatmap}.
 
-\imagen{heatmap}{Ejemplo de Heatmap}
+\imagenflotante{heatmap}{Ejemplo de Heatmap}
 
 \section{SmartKlass™ Learning Analytics Moodle}
-SmartKlass™ Learning Analytics Moodle\cite{noauthor_moodle_nodate-3} es un panel de análisis dirigido a docentes y estudiantes que muestra la evolución del rendimiento sobre el curso.
+SmartKlass™ Learning Analytics Moodle \cite{noauthor_moodle_nodate-3} es un panel de análisis dirigido a docentes y estudiantes que muestra la evolución del rendimiento sobre el curso. Ejemplo en la figura \ref{fig:smartklass}.
 
 Aparentemente el proyecto lleva sin actualizarse desde hace 3 años\cite{noauthor_klassdata/moodle-local_smart_klass:_nodate}.
 
-\imagen{smartklass}{Ejemplo del panel SmartKlass}
+\imagenflotante{smartklass}{Ejemplo del panel SmartKlass}
 
 \section{Engagement analytics}
 
-Engagement analytics\cite{noauthor_moodle_nodate-4} proporciona información sobre el progreso de los estudiantes en relación con una serie de indicadores.
+Engagement analytics \cite{noauthor_moodle_nodate-4} proporciona información sobre el progreso de los estudiantes en relación con una serie de indicadores.
 
 Como su nombre indica, analiza el nivel de compromiso o participación del estudiante en el curso.
 
 \section{Course dedication}
 
-Course dedication\cite{noauthor_moodle_nodate-5} Calcula el tiempo estimado de dedicación de los participantes en el curso.
+Course dedication \cite{noauthor_moodle_nodate-5} Calcula el tiempo estimado de dedicación de los participantes en el curso.
 
 
 
