--- a/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -8,12 +8,14 @@ Se han implementado multitud de nuevas funcionalidades, algunas de ellas por ini
 
 He aplicado lo aprendido de muchas de las asignaturas de la carrera, procesadores de lenguaje en las expresiones regulares, patrones de diseño y Java. De esto último he aplicado prácticamente todas sus características tales como herencia, genericidad, programación funcional o Java Stream. La curva de aprendizaje con JavaFx no fue muy complicada ya que había tenido experiencias previas con varios trabajos de la universidad con Tkinter\cite{noauthor_tkinter_nodate}, una librería de creación de interfaces gráficas pero en Python y con ciertos parecidos.
 
-En resumidas cuentas, en general he disfrutado mucho realizando el proyecto, con motivación se puede realizar grandes trabajos y bien mimados.
+
+
+En resumidas cuentas, en general he disfrutado mucho realizando el proyecto, con motivación se puede realizar grandes trabajos.
 
 
 \section{Líneas de trabajo futuras}
 
-A pesar de cumplir los objetivos planteados, sí que se han encontrado otras funcionalidades durante el desarrollo del proyecto. Estas nuevas características, generalmente no se han podido implementar por falta de tiempo.
+A pesar de cumplir los objetivos planteados, sí que se han encontrado otras funcionalidades durante el desarrollo del proyecto. Estas nuevas características no se han podido implementar por falta de tiempo.
 
 \begin{itemize}
 	\item Empleo de técnicas de minería de datos que generan clúster de usuarios del curso. Estos clústeres se muestran en una gráfica de dispersión (en inglés \textit{scatter plot})
